syntax = "proto3";

option java_multiple_files=true;
option java_package="com.jim";
option java_outer_classname="HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {
  rpc sayHello(HelloRequest) returns (HelloResponse);
}